Changed wording to list WordNet as merely an example of a lexical semantic hierarchy.

--- a/src/danbikel/parser/package.html
+++ b/src/danbikel/parser/package.html
@@ -4,8 +4,8 @@
 Implements a framework for developing statistical syntactic parsers
 that, unlike previous approaches, uses a language/Treebank module for
 a great deal of language-independence and supports models that
-incorporate <a target="_blank"
-href="http://www.cogsci.princeton.edu/~wn">WordNet</a> information.
+incorporate a lexical semantic hierarchy, such as <a target="_blank"
+href="http://www.cogsci.princeton.edu/~wn">WordNet</a>.
 </p>
 <p>
 Several of the classes in this package, particularly the smaller
