--- a/src/danbikel/parser/constraints/package.html
+++ b/src/danbikel/parser/constraints/package.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <p>
-Provides classes to allow constrain-parsing.
+Provides interfaces and classes to allow constrain-parsing.
 </p>
 </body>
 </html>
